# stupid-idiot-calc

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
flatpak/: io.github.soleynn.StupidIdiotCalc.desktop  io.github.soleynn.StupidIdiotCalc.metainfo.xml  io.github.soleynn.StupidIdiotCalc.yml
include/calc/: assert.hpp  ast.hpp  diagnostic.hpp  environment.hpp  error.hpp  evaluator.hpp  lexer.hpp  limits.hpp  logger.hpp  number.hpp  output_formatter.hpp  parser.hpp  result.hpp  token.hpp  tracer.hpp
src/cli/: CMakeLists.txt  crash_handler.cpp  crash_handler.hpp  logger.hpp  main.cpp
src/engine/: CMakeLists.txt  ast.cpp  diagnostic.cpp  evaluator.cpp  lexer.cpp  output_formatter.cpp  parser.cpp
src/gui/: CMakeLists.txt  CalcButton.qml  Main.qml  Theme.qml  engine_bridge.cpp  engine_bridge.hpp  main.cpp
tests/: CMakeLists.txt  stress_small_stack.cpp  test_diagnostic.cpp  test_environment.cpp  test_evaluator.cpp  test_format.cpp  test_lexer.cpp  test_logger.cpp  test_parser.cpp  test_properties.cpp  test_result.cpp  test_trace.cpp
tests/fuzz/: CMakeLists.txt  fuzz_parse.cpp
